objects/Warranty_Observation__c/Warranty_Observation__c.object-meta.xml
<CustomObject>
    <label>Warranty Observation</label>
    <nameField>
        <label>Observation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>