objects/Warranty_Observation__c/fields/Decision_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Decision_Pattern__c</fullName>
    <description>The adjudication decision and reasoning extracted from the approver&apos;s action.</description>
    <label>Decision Pattern</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>