objects/Warranty_Observation__c/fields/Failure_Category__c.field-meta.xml
<CustomField>
    <fullName>Failure_Category__c</fullName>
    <label>Failure Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compressor Seal Failure</fullName>
            </value>
            <value>
                <fullName>Battery Management Failure</fullName>
            </value>
            <value>
                <fullName>Electrical System Failure</fullName>
            </value>
            <value>
                <fullName>Cooling System Failure</fullName>
            </value>
            <value>
                <fullName>Brake System Failure</fullName>
            </value>
            <value>
                <fullName>Suspension Failure</fullName>
            </value>
            <value>
                <fullName>Software/ECU Failure</fullName>
            </value>
            <value>
                <fullName>Body/Exterior Defect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>