objects/Warranty_Observation__c/fields/Human_Override__c.field-meta.xml
<CustomField>
    <fullName>Human_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to exclude observation from automated semantic search. Use when AI extracted incorrectly.</description>
    <label>Human Override</label>
    <type>Checkbox</type>
</CustomField>