objects/Warranty_Observation__c/fields/Novelty__c.field-meta.xml
<CustomField>
    <fullName>Novelty__c</fullName>
    <label>Novelty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entirely Unique</fullName>
            </value>
            <value>
                <fullName>Distinctive</fullName>
            </value>
            <value>
                <fullName>Commonplace</fullName>
            </value>
            <value>
                <fullName>Exact Duplicate</fullName>
            </value>
            <value>
                <fullName>Flagged for Review</fullName>
                <default>true</default>
                <label>Flagged for Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>