objects/Warranty_Observation__c/fields/Observation_Level__c.field-meta.xml
<CustomField>
    <fullName>Observation_Level__c</fullName>
    <label>Observation Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Order (raw extraction)</fullName>
                <default>true</default>
                <label>First Order (raw extraction)</label>
            </value>
            <value>
                <fullName>Second Order (reflection/pattern)</fullName>
            </value>
            <value>
                <fullName>Third Order (editorial/trend)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>