objects/Warranty_Observation__c/fields/Observation_Note__c.field-meta.xml
<CustomField>
    <fullName>Observation_Note__c</fullName>
    <description>The primary content of this observation — the insight extracted from claim data.</description>
    <label>Observation Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>