objects/Warranty_Observation__c/fields/Source_Claim__c.field-meta.xml
<CustomField>
    <fullName>Source_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Warranty Observations</relationshipLabel>
    <relationshipName>Warranty_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>