objects/Warranty_Observation__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma-separated tags assigned by the Tagger prompt. Example: thermal-failure, batch-defect, E9-SUV</description>
    <label>Tags</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>