objects/Warranty_Observation__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>