objects/Warranty_Observation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Decision_Pattern__c</columns>
    <columns>Failure_Category__c</columns>
    <columns>Human_Override__c</columns>
    <columns>Observation_Level__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>